--- a/homepage/home.css
+++ b/homepage/home.css
@@ -1,13 +1,13 @@
- * {
+ /* * {
      margin: 0;
      padding: 0;
      box-sizing: border-box;
- }
+ } */
   .c {
       width: 100%;
      height: 400px;
      background-color: white
-  }
+  } 
   .swiper{
       width: 100%;
       height: 400px;
@@ -19,55 +19,233 @@
   .swiper .swiper-button-prev, .swiper .swiper-button-next{
       color: rgb(145, 145, 133);
       border-radius: 50%;
-      padding: 30px;
+      padding: 10px;
       background-color:rgb(247, 239, 239)
   }
   
-table {
 
-    border-collapse: collapse;
-    width: 70%;
-    margin: auto;
-    margin-top: 50px;
-  }
-  
-  th,
-  td {
-    border-radius: 30px;
-    padding: 20px;
-    justify-content: center;
-    margin: auto;
-    text-align: center;
-    border: 30px;
-    /* border: 1px solid  rgb(207, 203, 203); */
-  }
-  
-  tr  {
-    border-radius: 30px;
-      font-size: 20px;
-      justify-content: center;
-      margin: auto;
-      text-align: center;
-    background-color: white;
-    color: rgb(112, 106, 106);
-  }
-  #table{
-    width: 50%;
-    height: 100%;
-    border-radius: 30px;
-    border: 1px solid rgb(207, 203, 203);
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;1,300&display=swap');
+*{
+    font-family: Lato;
 }
-tr{
-    border-radius: 30px;
-border: 1px solid rgb(207, 203, 203);
-text-align: left;
-}
- #conitenr {
-     width: 70%;
-     margin: auto;
-     display: grid;
-     grid-template-columns: repeat(3,1fr);
-     grid-template-rows: auto;
-     gap: 20px;
+
+   #input {
+     padding-top: 1%;
+    display: grid;
+    gap: 25px;
+    grid-template-columns: repeat(4,1fr);
+    grid-template-rows: 230px;
+    /* gap: 20px; */
+    margin-top: 555px;
+    /* margin-left: 10px; */
+    width: 80%;
+    margin: auto;
+    /* overflow: hidden; */
+      /* border: 1px solid green;  */
+    
+   }
+   #input >  div  {
+    
      border-radius: 20px;
- }
+     height: 210px;
+     /* border: 1px solid red; */ */
+     overflow: hidden
+  
+   }
+   #input >  div :first-child {
+     height: 200px;
+     width: 100%;
+     border-radius: 20px;
+      /* border: 1px solid yellow;  */
+     overflow: hidden; 
+      transition: transform .2s ease; 
+   }
+   
+   #input  >  div :hover img {
+    transition: transform .3s ease; 
+       transform: scale(1.5);
+       /* overflow: hidden; */
+       
+   }
+
+#container {
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    /* gap: 20px; */
+    margin-top: 50px;
+    
+    /* margin-left: 10px; */
+    width: 82%;
+    margin: auto;
+     /* border: 1px solid green; */ */
+    
+    }
+    .main{
+        width: 92%;
+    height: 350px;
+    /* border: 1px solid green; */
+    justify-content: space-evenly;
+    border-radius: 10px;
+    /* margin-left: 50px; */
+    box-shadow: rgba(99, 99, 99, 0.2) 10px 2px 8px 0px;
+    margin-top: 20px;
+    }
+    .image{
+        width: 100%;
+        height: 200px;
+        margin-bottom: 5%;
+        border-top-left-radius: 5px;
+        border-top-right-radius: 5px;
+    }
+    h4{
+        margin-left: 5px;
+        margin-top: -2px;
+        white-space: wrap; 
+        width: 300px; 
+        font-size: 13px;
+        overflow: hidden;
+        text-overflow: ellipsis;
+        /* border: 1px solid #000000; */
+    }
+    /* h4:hover{
+        overflow: visible;
+    } */
+
+    .des{
+        margin-left: 5px;
+        margin-top: -6px;
+        font-size: 13px;
+        white-space: nowrap; 
+        width: 300px; 
+        font-size: 13px;
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
+    
+    /* .hold{
+        display: flex;
+        justify-content: space-between;
+    } */
+    .wgt{
+        margin-left: 5px;
+        margin-top: -28px;
+        display: flex;
+        color: rgb(56, 55, 55);
+         }
+
+  
+    h6{
+        font-size: 13px;
+
+    }
+    .wgt  :nth-child(1){
+        margin-left: 1px;
+
+    }
+    .wgt  :nth-child(2){
+       margin-left: 5px;
+
+    }
+
+    .wgt  :nth-child(3){
+        margin-left: 1px;
+ 
+     }
+     .wgt  :nth-child(4){
+        margin-left: 10px;
+ 
+     }
+     .wgt  :nth-child(5){
+        margin-left: 5px;
+ 
+     }
+
+     .pri{
+        margin-left: 5px;
+        margin-top: -40px;
+        display: flex;
+        color: rgb(56, 55, 55);
+    }
+    .pri :nth-child(1){
+        color: red;
+        font-size: 15px;
+    }
+    .pri :nth-child(2){
+       margin-top: 25px;
+       margin-left: 5px;
+       
+    }
+    .pri :nth-child(3){
+        margin-top: 25px;
+    }
+    .pri :nth-child(4){
+        margin-top: 23px;
+        margin-left: 10px;
+    }
+    .addcartbtn{
+        margin-left: 120px;
+        margin-bottom: 2px;
+
+        width: 80%;
+        height: 40px;
+        border-radius: 5px;
+        border: 0px;
+        background-color:rgb(233,78,76) ;
+        color: white;
+    }
+
+/* bonelessCuts */
+   #bonelessCuts {
+    display: grid;
+    grid-template-columns: repeat(3,1fr);
+    /* gap: 20px; */
+    margin-top: 50px;
+    /* margin-left: 10px; */
+    width: 82%;
+    margin: auto;
+    /* border: 1px solid green; */
+    
+    }
+
+    /* blog */
+
+    #blog {
+        display: grid;
+        grid-template-columns: repeat(3,1fr);
+        /* gap: 20px; */
+        margin-top: 50px;
+        /* margin-left: 10px; */
+        width: 82%;
+        margin: auto;
+        /* border: 1px solid green; */
+        
+        }
+        #b_main{
+            width: 88%;
+            height: 350px;
+            /* border: 1px solid green; */
+            justify-content: space-evenly;
+            border-radius: 10px;
+            /* margin-left: 50px; */
+            box-shadow: rgba(99, 99, 99, 0.2) 10px 2px 8px 0px;
+            margin-top: 20px;
+        }
+        #b_name{
+            margin-left: 5px;
+            margin-top: -2px;
+            white-space: wrap; 
+            width: 300px; 
+            font-size: 15px;
+            
+            overflow: hidden;
+            text-overflow: ellipsis;
+            /* border: 1px solid #000000; */
+        }
+        .b_image{
+            width: 353px;
+            height: 200px;
+            border-top-left-radius: 5px;
+            border-top-right-radius: 5px;
+        }
+       
+   
