cheken page head
chicken page head issue solved

--- a/sachin/styles/chicken.css
+++ b/sachin/styles/chicken.css
@@ -2,6 +2,37 @@
 * {
   font-family: Lato;
 }
+.refermain {
+  display: flex;
+  margin-left: 150px;
+  font-weight: 900;
+  font-size: 15px;
+}
+#chickenHead {
+  color: red;
+}
+a {
+  text-decoration: none;
+}
+.atultoday:hover {
+  color: red;
+}
+a:hover {
+  color: red;
+}
+a:visited {
+  color: black;
+}
+.head {
+  margin-left: 150px;
+  /* padding-left:50px */
+}
+.bar {
+  margin-left: 150px;
+  margin-right: 200px;
+}
+
+/* ========== */
 #container {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
