--- a/Atul1/styles/today.css
+++ b/Atul1/styles/today.css
@@ -20,7 +20,9 @@
   justify-content: space-evenly;
   border-radius: 10px;
   /* margin-left: 50px; */
-  box-shadow: rgba(99, 99, 99, 0.2) 10px 2px 8px 0px;
+  /* box-shadow: rgba(99, 99, 99, 0.2) 10px 2px 8px 0px; */
+  box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
+
   margin-top: 20px;
 }
 .image {
