--- a/sachin/styles/chicken.css
+++ b/sachin/styles/chicken.css
@@ -50,7 +50,7 @@ a:visited {
   justify-content: space-evenly;
   border-radius: 10px;
   /* margin-left: 50px; */
-  box-shadow: rgba(99, 99, 99, 0.2) 10px 2px 8px 0px;
+  box-shadow: rgb(38, 57, 77) 0px 20px 30px -10px;
   margin-top: 20px;
 }
 .image {
@@ -148,4 +148,6 @@ h6 {
   color: white;
   font-size: 10px;
   padding-right: 10px;
+  cursor: pointer;
+  font-size: 15px;
 }
