--- a/SAGAR/home.css
+++ b/SAGAR/home.css
@@ -177,6 +177,7 @@
         color: white;
         cursor: pointer;
         font-weight: bolder;
+        font-size: 16px;
     }
 
    #bonelessCuts {
