--- a/Styles/searchinput.css
+++ b/Styles/searchinput.css
@@ -266,8 +266,20 @@ body{
 
   
   #searchResult{
-      border: 1px solid black;
-      width: 100%;
-      height: 800px;
-      margin-top: 10px;
-  }
+    border: 1px solid white;
+    width: 100%;
+    height: auto;
+    margin-top: 10px;
+}
+
+.searchimg{
+  width: 100px;
+
+}
+
+.searchprime{
+  display: flex;
+  padding: 10px;
+  box-shadow: 10px 10px 10px 5px  rgb(160, 153, 153);
+  border-radius: 10px;
+}
