--- a/Styles/style.css
+++ b/Styles/style.css
@@ -166,6 +166,7 @@ body{
     font-weight: bolder;
     margin-left: 5px;
     color: black;
+    margin: auto;
     border: none;
     background-color: white;
     cursor: pointer;
@@ -210,3 +211,17 @@ body{
     width: 100%;
     height: 130px;
 }
+
+
+/* footerContainer start*/
+
+#footerdiv{
+    /* border: 1px solid black; */
+    
+    width: 100%;
+    height: 1100px;
+    margin: auto;
+    margin-top: 40px;
+    box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px, rgba(0, 0, 0, 0.3) 0px 30px 60px -30px, rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
+}
+/* footerContainer close*/
