--- a/addresspage/1.css
+++ b/addresspage/1.css
@@ -1,12 +1,14 @@
 @import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;1,300&display=swap");
 .bag {
-  width: 80%;
-  height: auto;
+  
+  width: 100%;
+  height: fit-content ;
   /* border: 1px solid red; */
   margin: auto;
   display: flex;
-  justify-content: space-between;
-  padding: 20px;
+  margin-left: 400px;
+  /* justify-content: space-between; */
+  padding: 50px;
 }
 
 .bag > div {
@@ -47,26 +49,32 @@ h1 {
   width: 95%;
   height: 50px;
   text-align: center;
-  color: rgb(70, 67, 67);
-  background-color: grey;
+  color: white;
+  background-color: black;
   padding: 5px;
   border-radius: 3px;
   border: none;
   font-size: 20px;
+  cursor: pointer;
 }
 
 .space {
   margin-bottom: 30px;
 }
-
-.radioDiv {
+#login:hover{
+  background-color: crimson;
+  color: white;
+  cursor: pointer;
+}
+/* .radioDiv {
   margin-top: 100px;
   font-size: 30px;
   color: gray;
-}
+} */
+
 a {
   text-decoration: none;
-  color: gray;
+  color: white;
 }
 #box {
   width: 10px;
